assets/css/layout.css
/* ... */
.website-navigation.fixed li {
	color: inherit;
	border: 0;
	padding: 0;
}

.website-navigation.fixed li a {
	padding: 0 0.5em;
}

.website-navigation.fixed li:hover,
.website-navigation.fixed li.active:hover {
	background: rgba(15, 127, 18, 1.0);
	color: white;
}

.website-navigation.fixed li.active {
	color: rgba(15, 127, 18, 1.0);
}

.website-navigation.fixed li ul {
	top: calc(2em - 1px);
}

.website-navigation.fixed li ul li {
	background: rgba(15, 127, 18, 1.0);
	color: white;
}

.website-navigation.fixed li:hover > ul > li:hover {
	background: white;
	color: black;
}


@media (max-width: 700px) {
	.website-navigation,
	.website-navigation.fixed {
		position: fixed;
		top: 0;
		bottom: auto;
		flex-direction: column;
		color: white;
		line-height: 2.5em;
	}

	.website-header.small + .website-navigation + .website-content {
		margin-top: calc(2.5em - 10px);
	}

	.website-navigation.fixed,
	.website-navigation:focus {
		background: rgba(15, 127, 18, 1.0) url(../img/bnaic-logo-white-simple.svg) center 0.5em no-repeat;
		background-size: auto 1.5em;
		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
	}

	.website-navigation li ul {
		position: static;
		display: block;
		box-shadow: none;
		text-indent: 0.75em;
		background:rgba(15, 127, 18, 1.0); 
	}

	.website-navigation li ul li {
		color: white;
	}

	.website-navigation li ul li a {
		overflow: hidden;
		text-overflow: ellipsis;
	}

	.website-navigation li,
	.website-navigation.fixed li {
		padding: 0;
		margin: 0;
		color: white;
		border: 0;
	}

	.website-navigation a {
		display: block;
		padding: 0 0.75em;
	}

	.website-navigation li:hover,
	.website-navigation li.active:hover,
	.website-navigation.fixed li:hover,
	.website-navigation.fixed li.active:hover,
	.website-navigation li:hover > ul > li:hover ,
	.website-navigation li.active:hover > ul > li:hover,
	.website-navigation.fixed li:hover > ul > li:hover,
	.website-navigation.fixed li.active:hover > ul > li:hover {
		color: rgba(15, 127, 18, 1.0);
		background: white;
	}

	.website-navigation li.active,
	.website-navigation.fixed li.active {
		color: white;
		background: rgba(0, 0, 0, 0.1);
	}

	.website-navigation::before {
		content: '\2630';
		font-size: 1.5em;
		padding-left: 0.5em;
		display: block;
		cursor: pointer;
	}

	/* When the menu is open, overlay a 'dismissal' button on top of it */
	.website-navigation:focus + .website-content::after {
		content: '';
		position: fixed;
		top: 0;
		left: 0;
		right: 0;
		height: 2.475em;
		z-index: 30;
	}

	.website-navigation .container {
		max-height: 0;
		width: 100%;
		overflow: hidden;
		transition: max-height ease-in-out 150ms;
		display: flex;
		flex-direction: column;
		align-items: stretch;
	}

	.website-navigation:focus {
		background-color: rgba(15, 127, 18, 1.0);
	}

	.website-navigation:focus .container {
		max-height: calc(100vh - 2.5em);
		overflow: auto;
	}

	.website-navigation:focus + .website-content::before {
		content: '';
		position: fixed;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		background: rgba(0, 0, 0, 0.4);
	}
}

.website-content {
	flex: 1 1 auto;
	padding: 40px 20px;
	background: white;
	color: #333;
}

.website-content a:link,
.website-content a:visited {
	color: #1a7181;
}

.website-content a:active {
	color: #374763;
}

.website-content figure {
	margin: 1em 0;
	max-width: 100%;
}

.website-content figure img {
	max-width: 100%;
}

.website-content figure figcaption {
	font-size: 0.8em;
}

.website-content table th,
.website-content table td {
	vertical-align: top;
}

.website-content h2 {
	font-size: 1.25em;
}

.website-content h3 {
	font-size: 1.0em;
	/*margin: 0;*/
}

.website-content h3 + p {
	margin-top: 0;
}

.website-content h4 {
	font-size: 1em;
	margin: 0;
}

.website-content > .container > section {
	margin-bottom: 3em;
	padding-bottom: 2em;
	box-shadow: 0 7px 10px -12px #000; /* subtiel lijntje */
}

.website-content > .container > section:last-child {
	box-shadow: none;
	margin-bottom: 0;
}

header h1 {
	background: url(../img/bnaic-logo.svg) center no-repeat;
	overflow: hidden;
	background-size: contain;
	height: 200px;
	color: rgba(0, 0, 0, 0.0);
}

body > footer {
	flex: 0 0 auto;
	color: white;
	padding: 20px;
}

footer a {
	color: inherit;
}

@media (max-width: 700px) {
	.website-content {
		padding: 20px;
	}
	
	body > footer {
		text-align: center;
	}
}

/* Registration form */
.form-grouping + .form-grouping {
	margin-top: 2em;
}

.form-group {
	display: block;
	margin-bottom: 0.125em;
}

.form-group label {
	box-sizing: border-box;
	display: block;
}

.form-group.required label::after {
	content: '*';
	color: red;
}

.form-group.choice ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

.form-group.choice label.option::after {
	content: none;
}

.form-group input,
.form-group select {
	display: block;
	font: inherit;
}

.form-group input {
	box-sizing: border-box;
	width: 100%;
}

.form-group input[type=checkbox],
.form-group input[type=radio] {
	display: inline-block;
	width: auto;
}

.form-group .hint {
	background: #f55;
	padding: 0.25em 0.5em;
	color: white;
}

.form-controls {
	margin-top: 1em;
}

.form-controls button {
	display: inline-block;
	font: inherit;
	padding: 0.5em 1em;
	cursor: pointer;
}

@media (min-width: 700px) {
	/* Labels fit next to the field here */
	.form-group label:not(.option) {
		display: inline-block;
		width: 200px;
		text-align: right;
		padding-right: 1em;
	}

	.form-group input,
	.form-group select {
		display: inline-block;
	}

	.form-group.choice ul {
		display: inline-block;
		vertical-align: top;
	}

	.form-group.checkbox {
		margin-left: 200px;	
	}

	.form-group input:not([type=radio]):not([type=checkbox]) {
		width: 500px;
	}

	.form-group .hint,
	.form-controls {
		margin-left: 200px;
		max-width: 500px;
		box-sizing: border-box;
	}
}

/* Hotels */

.embedded-map {
	width: 100%;
	height: 450px;
}
/* ... */

